--- a/src/app/home-page/header/header.component.css
+++ b/src/app/home-page/header/header.component.css
@@ -80,3 +80,69 @@ a{
 #lang-div{
   text-align: end;
 }
+
+/* change location modal */
+    @media (min-width: 96rem) {
+      .small {
+        display: none;
+      }
+ 
+    }
+ 
+    @media (max-width: 160rem) {
+      .large {
+        display: none;
+      }
+ 
+      .logo {
+        font-size: 1rem;
+      }
+    }
+ 
+    .btn-default
+    {
+     background-color: green;
+     color: white;
+   }
+ 
+   .maincities
+   {
+     height: 4.5rem;
+     width: 4.5rem;
+     margin-right: 1.5rem;
+     margin-left: 1rem;
+   }
+ 
+   .maincitiestext
+   {
+     font-weight: bold;
+     padding-right: 1.75rem;
+     padding-left: 1.70rem;
+     font-size: 0.75rem;
+   }
+ 
+   .dropdown-toggle
+   {
+     margin-left: 5rem;
+     margin-bottom: 1rem;
+   }
+ 
+ 
+  ul {
+   list-style-type: none;
+   margin: 0;
+   padding: 0;
+   overflow: hidden;
+ }
+ 
+ 
+ li {
+   float: left;
+ }
+ 
+ #_setImg {
+  background-color: transparent;
+  border: none;
+ }
+ 
+ 
