--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -18,7 +18,7 @@
                 </div>
 
               </div>
-              <div class="col-md-4 white-left">
+              <div class="col-md-4">
                 <span class="fa fa-truck banner-icon" aria-hidden="true"></span>
               </div>
             </div>
