--- a/src/app/shared/body/body.component.html
+++ b/src/app/shared/body/body.component.html
@@ -67,7 +67,7 @@
             <span>K</span>isan <span>K</span>i <span>D</span>ukan
           </h4>
           <p>{{ 'body.about_description' | translate }}</p>
-          <h6 class="w3l-style">kkdonline.com</h6>
+          <h6 class="w3l-style"></h6>
         </div>
         <!-- Stats-->
         <div class="col-md-7 stats-info-agile">
