--- a/src/app/shared/body/body.component.css
+++ b/src/app/shared/body/body.component.css
@@ -151,6 +151,8 @@ h6.w3l-style {
   -moz-box-shadow: 0px 3px 5px 0px rgba(10, 10, 10, 0.47);
   box-shadow: 0px 3px 5px 0px rgba(10, 10, 10, 0.47);
 }
+
+
 .stats-grid {
   padding: 1.5em 0;
 }
@@ -170,6 +172,18 @@ h6.w3l-style {
   width: 33%;
   float: right;
   text-align: center;
+}
+
+@media (max-width: 500px) {
+  .stats-info-agile {
+    visibility : hidden;
+} 
+
+.w3l-right-stats{
+    visibility: visible;
+    margin : auto;
+    width : 100%
+}            
 }
  /*-- about --*/
 
