working on cards

--- a/src/app/farmer/component/farmer-dashboard/farmer-previous-order/farmer-previous-order.component.html
+++ b/src/app/farmer/component/farmer-dashboard/farmer-previous-order/farmer-previous-order.component.html
@@ -2,7 +2,15 @@
   <div class="row">
     <div *ngFor="let order of orderList | paginate: {itemsPerPage:8,currentPage:p}" class="col-lg-3">
 
-      <div class="card shadow p-2 mb-3" style="height: 18rem;">
+      <div class="card shadow p-2 mb-3" style="height: 27rem;">
+        <div *ngFor="let item of items">
+          <div *ngIf="order.name==item">
+            <!-- Card image -->
+            <div class="view overlay zoom">
+              <img class="card-img-top" src="../../../../../assets/order/{{item}}.jpg" alt="Product Image">
+            </div>
+          </div>
+        </div>
         <!-- Card content -->
         <div class="card-body text-center">
           <!-- Title -->
