--- a/src/app/farmer/component/farmer-dashboard/farmer-current-order/farmer-current-order.component.html
+++ b/src/app/farmer/component/farmer-dashboard/farmer-current-order/farmer-current-order.component.html
@@ -1,8 +1,15 @@
 <div class="container mb-2 mt-5">
   <div class="row">
     <div *ngFor="let order of orderList | paginate: {itemsPerPage:8,currentPage:p}" class="col-lg-3">
-
-      <div class="card shadow p-2 mb-3" style="height: 21rem;">
+      <div class="card shadow p-2 mb-3" style="height: 30rem;">
+        <div *ngFor="let item of items">
+          <div *ngIf="order.name==item">
+            <!-- Card image -->
+            <div class="view overlay zoom">
+              <img class="card-img-top" src="../../../../../assets/order/{{item}}.jpg" alt="Product Image">
+            </div>
+          </div>
+        </div>
         <!-- Card content -->
         <div class="card-body text-center">
           <!-- Title -->
@@ -11,8 +18,8 @@
           </h5>
           <!-- Text -->
           <div class="text-area">
-            <p class="card-text py-1">
-              <b>{{ 'farmer_current_order.customer_id' | translate }}: </b>{{order.kkdCustId}}</p>
+            <!-- <p class="card-text py-1">
+              <b>{{ 'farmer_current_order.customer_id' | translate }}: </b>{{order.kkdCustId}}</p> -->
             <p class="card-text py-1">
               <b>{{ 'farmer_current_order.product_name' | translate }}: </b>{{order.name}}</p>
             <p class="card-text py-1">
@@ -31,19 +38,18 @@
           </div>
           <hr>
           <span *ngIf="order.farmerStatus=='Accept'">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal3" (click)="setDataOtp(order.orderId,order.otp)"
+            <a data-toggle="modal" data-target="#exampleModal3" (click)="setDataOtp(order.orderId,order.otp)"
               style="margin-top:13px;">
               {{ 'farmer_current_order.delivered' | translate }}
-            </button>
+            </a>
           </span>
           <span *ngIf="order.farmerStatus==null">
-            <button type="button" class="btn btn-primary mt-5" data-toggle="modal" data-target="#exampleModal1" (click)="setData(order.orderId)">
+            <a class="mt-10" data-toggle="modal" data-target="#exampleModal1" (click)="setData(order.orderId)">
               {{ 'farmer_current_order.accept' | translate }}
-            </button>
-
-            <button type="button" class="btn btn-primary mt-5 ml-3" data-toggle="modal" data-target="#exampleModal2" (click)="setData(order.orderId)">
+            </a>
+            <a class="ml-3 mt-10" data-toggle="modal" data-target="#exampleModal2" (click)="setData(order.orderId)">
               {{ 'farmer_current_order.decline' | translate }}
-            </button>
+            </a>
           </span>
         </div>
       </div>
