--- a/src/app/shared/body/body.component.css
+++ b/src/app/shared/body/body.component.css
@@ -145,7 +145,7 @@ h6.w3l-style {
   -moz-background-size: cover;
   -o-background-size: cover;
   -ms-background-size: cover;
-  min-height: 390px;
+  min-height: 465px;
   padding:0;
   -webkit-box-shadow: 0px 3px 5px 0px rgba(10, 10, 10, 0.47);
   -moz-box-shadow: 0px 3px 5px 0px rgba(10, 10, 10, 0.47);
@@ -170,6 +170,7 @@ h6.w3l-style {
 .w3l-right-stats {
   background: #56d25b;
   width: 33%;
+  min-height: 465px;
   float: right;
   text-align: center;
 }
@@ -199,4 +200,8 @@ h6.w3l-style {
 
  #numscroller{
    overflow: hidden;
+ }
+
+ .just-align{
+   text-align: justify;
  }
