--- a/src/app/shared/body/body.component.html
+++ b/src/app/shared/body/body.component.html
@@ -66,7 +66,7 @@
           <h4>{{ 'body.about' | translate }}
             <span>K</span>isan <span>K</span>i <span>D</span>ukan
           </h4>
-          <p>{{ 'body.about_description' | translate }}</p>
+          <p class = "just-align">{{ 'body.about_description' | translate }}</p>
           <h6 class="w3l-style"></h6>
         </div>
         <!-- Stats-->
