--- a/src/app/farmer/component/farmer-dashboard/farmer-previous-order/farmer-previous-order.component.css
+++ b/src/app/farmer/component/farmer-dashboard/farmer-previous-order/farmer-previous-order.component.css
@@ -18,3 +18,118 @@ hr {
 .card-title {
     margin: 0.1rem;
 }
+
+.alert {
+    background: #ffaaaa;
+    padding: 0px;
+    font-size: .9em;
+    margin-bottom: 0px;
+    display: inline-block;
+    animation: 2s alertAnim forwards;
+}
+
+  .block {
+    margin: 20px;
+    border-radius: 4px;
+    width: 280px;
+    min-height: 430px;
+    background: #fff;
+    padding: 23px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    box-shadow: 0 2px 55px rgba(0,0,0,0.1);
+  }
+  .top {
+    border-bottom: 1px solid #e5e5e5;
+    padding-bottom: 10px;
+    text-align: center;
+  }
+  .top a {
+    color: #9e9e9e;
+  }
+  .top a:hover {
+    color: #c7ccdb;
+  }
+  .converse {
+    padding: 2px 10px;
+    border-radius: 20px;
+    text-transform: uppercase;
+    font-size: 14px;
+  }
+  .middle {
+    margin-bottom: 40px;
+  }
+  .middle img {
+    width: 100%;
+    height: 12em;
+  }
+  .bottom {
+    text-align: center;
+    padding: 0rem;
+    margin: 0rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+
+.address {
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+.name {
+  font-size: 14px;
+  color: #969696;
+  margin-bottom: 5px;
+}
+.quantity{
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+.price{
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+.validity{
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+.mobile{
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+.style {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+.old-price {
+  color: #f00;
+  text-decoration: line-through;
+}
+
+.bottom .price {
+    margin-bottom: 8px;
+}
+
+.bottom {
+    text-align: left;
+}
+
+.bottom .name {
+  margin-top: -1rem;
+  text-align: center;
+}
