--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -133,7 +133,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-5 footer-copyright">
-          <p>&copy; 2018 Kisan Ki Dukan</p>
+          <p>&copy; 2018 Kisan Ki Dukan. All Rights Reserved</p>
         </div>
         <div class="col-md-7 footer-menu">
           <nav class="navbar navbar-dark navbar-expand-md">
