--- a/src/app/customer/component/customer-my-account/customer-address-book/customer-address-book.component.html
+++ b/src/app/customer/component/customer-my-account/customer-address-book/customer-address-book.component.html
@@ -1,5 +1,5 @@
 <h1>{{ 'customer_address_book.address_details' | translate }}</h1>
-<div class="container-fluid">
+<div class="container-fluid" id="main_div">
   <div class="row" style="margin: auto">
     <div class="col-4" style="max-width: 250px;;">
       <div class="card add_card" id="card">
