--- a/src/app/customer/component/customer-my-account/customer-current-order/customer-current-order.component.css
+++ b/src/app/customer/component/customer-my-account/customer-current-order/customer-current-order.component.css
@@ -21,6 +21,7 @@ h1 {
     margin: 0;
     color: #28a745;
     line-height: 42px;
+    margin-top: 2rem;
     }
 
 
@@ -108,3 +109,6 @@ button:focus{
     border-color : #f9f9f9 !important;
 }
 
+#curr_main{
+    margin-bottom: 3rem;
+}
