--- a/src/app/customer/component/customer-my-account/customer-my-account.component.html
+++ b/src/app/customer/component/customer-my-account/customer-my-account.component.html
@@ -82,13 +82,13 @@
 
                     <div class = form-comp-button>
 
-                        <button  type="submit" class="btn btn-primary" value="Submit Form" [disabled]="!rForm.valid">{{ 'customer_my_account.submit' | translate }}</button>
+                        <button  type="submit" class="btn btn-success" value="Submit Form" [disabled]="!rForm.valid">{{ 'customer_my_account.submit' | translate }}</button>
                      </div></div></form>
 </div>
   </div>
 
         <div class="tab-pane change-password" id="settings1" role="tabpanel">
-            <div id="bgimg" style="padding-top: 5.4rem; padding-bottom: 3rem">
+            <div id="bgimg" style="padding-top: 3rem; padding-bottom: 3rem">
                 <h1> {{ 'customer_my_account.delete_profile' | translate }} </h1>
 
                 <form [formGroup]="rFormDeleteProfile" (ngSubmit)="deleteUser(rFormDeleteProfile.value)">
@@ -118,7 +118,7 @@
 
                       <div class = form-comp-button>
 
-                        <button  type="submit" class="btn btn-primary" value="Submit Form" [disabled]="!rFormDeleteProfile.valid">{{ 'customer_my_account.submit' | translate }}</button>
+                        <button  type="submit" class="btn btn-success" value="Submit Form" [disabled]="!rFormDeleteProfile.valid">{{ 'customer_my_account.submit' | translate }}</button>
                      </div></div></form>
                      </div>
         </div>
