--- a/src/app/customer/component/customer-my-account/customer-current-order/customer-current-order.component.html
+++ b/src/app/customer/component/customer-my-account/customer-current-order/customer-current-order.component.html
@@ -1,7 +1,7 @@
 <h1>
   {{ 'customer_current_order.my_orders' | translate }}
 </h1>
-<div class="container-fluid current-orders bg">
+<div class="container-fluid current-orders bg" id="curr_main">
   <div class="col-md-12">
     <div class="row current-orders-body">
       <div *ngFor="let order of currentOrders" class="col-md-4">
