--- a/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
+++ b/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
@@ -4,7 +4,7 @@
       <div class="col-12 col-xl-1 btn">
         <ul class="nav nav-tabs nav-justified sidebar-nav edit">
           <li class="nav-item">
-            <a class="nav-link active" data-toggle="tab" href="#profile" role="tab" aria-controls="add">Profile</a>
+            <a class="nav-link active" data-toggle="tab" href="#profile" role="tab" aria-controls="add">{{ 'my_account.profile' | translate }}</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" data-toggle="tab" href="#add" role="tab" aria-controls="add">{{ 'my_account.add_address' | translate }}</a>
