--- a/src/app/shared/body/body.component.html
+++ b/src/app/shared/body/body.component.html
@@ -74,15 +74,15 @@
           <div class="w3l-right-stats">
             <div class="stats-grid stat-border">
               <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='200' data-delay='2' data-increment="1">200</div>
-              <p>Farmers Joined</p>
+              <p>{{ 'body.farmer_joined' | translate }}</p>
             </div>
             <div class="stats-grid">
               <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='120' data-delay='2' data-increment="1">120</div>
-              <p>Kgs of Vegetables Sold</p>
+              <p>{{ 'body.kg_vegetables_sold' | translate }}</p>
             </div>
             <div class="stats-grid stat-border border-st2">
               <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='500' data-delay='2' data-increment="1">500</div>
-              <p>Happy Customers</p>
+              <p>{{ 'body.happy_customers' | translate }}</p>
             </div>
           </div>
         </div>
