--- a/src/app/customer/component/customer-my-account/customer-current-order/customer-current-order.component.css
+++ b/src/app/customer/component/customer-my-account/customer-current-order/customer-current-order.component.css
@@ -1,65 +1,72 @@
-.card{
-    background-color: #f9f9f9;
-    margin : auto;
-   
-}
-.item{
-    background-color: #f9f9f9;
-    padding-left : 5px;
-}
 
-.title{
-    color : white;
-    margin-top : -30px;
-    font-style: roboto;
+fieldset, label { margin: 0; padding: 0; }
+h1 { font-size: 1.5em; margin: 10px; }
+
+.card-img-top {
+    width: 100%;
+    height: 12em;
+    object-fit: cover;
+    margin-bottom: -1rem;
 }
 
-h1 {
-    font-weight: 600;
-    padding: 0.5em 0 40px 0;
-    text-align: center;
-    margin: 0;
-    color: #28a745;
-    line-height: 42px;
-    }
-
-
-.jumbotron{
-    background-color : #a9c056;
-    margin-top : -15px;
-    height : 30px;
-    
+p {
+    margin: 0em;
+    font-size: 12px;
+    text-align: left;
 }
 
-.item-id{
-    background-color: #a9c056;
-    padding-left : 5px;
-    font-size : 18px;
+hr {
+    margin: 0.3rem;
+    opacity: 0;
 }
 
-form{
-    width : 70%;
-    margin : 0 auto;
+.card-title {
+    margin: 0.1rem;
 }
 
-.display-4{
-    color : white;
-    margin-top : -30px;
-    font-style: roboto;
+a {
+   cursor: pointer;
 }
 
-.form-group{
-    font-style: roboto;
-    width : 85%;
-    margin : auto;
+#accept {
+    color: green;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
-.form-comp-top{
-    margin-top: 40px;
+#accept:hover {
+    color: blue;
+    text-underline-position: below;
 }
 
-.form-comp{
-    margin-top: 25px;
+#decline {
+    color: green;
+}
+
+#decline:hover {
+    color: blue;
+    text-underline-position: below;
+}
+#delivered {
+    color: green;
+    margin-left: 5px;
+}
+
+#delivered:hover {
+    color: blue;
+    text-underline-position: below;
+}
+
+h5 {
+}
+
+hr {
+    margin: 0.3rem;
+    opacity: 0;
+}
+
+.card-title {
+    margin: 0.1rem;
 }
 
 .alert {
@@ -71,40 +78,108 @@ form{
     animation: 2s alertAnim forwards;
 }
 
-@keyframes alertAnim {
-    from {
-        opacity:0;
-        transform: translateY(0);
-    }
-    to {
-        opacity:1;
-        transform: translateY(0);
-    }
-}
-
-.name{
-    padding-left : 5px;
-    font-size : 18px;
-}
-
-.form-comp-button{
-    margin-top: 10px;
+  .block {
+    margin: 20px;
+    border-radius: 4px;
+    width: 280px;
+    min-height: 430px;
+    background: #fff;
+    padding: 23px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    box-shadow: 0 2px 55px rgba(0,0,0,0.1);
+  }
+  .top {
+    border-bottom: 1px solid #e5e5e5;
+    padding-bottom: 10px;
     text-align: center;
-    border-radius: 12px;
-}
-button{
-    background-color : #a9c056 !important;
-    border : none;
-    margin-top: 35px;
+  }
+  .top a {
+    color: #9e9e9e;
+  }
+  .top a:hover {
+    color: #c7ccdb;
+  }
+  .converse {
+    padding: 2px 10px;
+    border-radius: 20px;
+    text-transform: uppercase;
+    font-size: 14px;
+  }
+  .middle {
+    margin-bottom: 40px;
+  }
+  .middle img {
+    width: 100%;
+    height: 12em;
+  }
+  .bottom {
+    text-align: center;
+    padding: 0rem;
+    margin: 0rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+  .address {
+    font-size: 14px;
+    margin-bottom: 5px;
+  }
+  .name {
+    font-size: 14px;
+    color: #969696;
+    margin-bottom: 5px;
+  }
+  .quantity{
+    font-size: 14px;
+    margin-bottom: 5px;
+  }
+  .price{
+    font-size: 14px;
+    margin-bottom: 5px;
+  }
+  .validity{
+    font-size: 14px;
+    margin-bottom: 5px;
+  }
+  .mobile{
+    font-size: 14px;
+    margin-bottom: 5px;
+  }
+  .style {
+    font-size: 16px;
     margin-bottom: 20px;
-}
+  }
+  .old-price {
+    color: #f00;
+    text-decoration: line-through;
+  }
 
-button:hover {
-    background-color: #c1ed23 !important;
-    
-}
+  .bottom .price {
+      margin-bottom: 8px;
+  }
 
-button:focus{
-    border-color : #f9f9f9 !important;
+  .bottom {
+      text-align: left;
+  }
+
+  .bottom .name{
+    margin-top: -1rem;
+    text-align: center;
 }
 
