--- a/src/app/customer/component/customer-my-account/customer-current-order/customer-current-order.component.html
+++ b/src/app/customer/component/customer-my-account/customer-current-order/customer-current-order.component.html
@@ -50,7 +50,7 @@
         <div class="bottom">
           <div class="name">{{ 'customer_current_order.product_name' | translate }}:{{order.name}}</div>
           <div class="quantity">{{ 'customer_current_order.quantity' | translate }}:{{order.quantity}} Kg</div>
-          <div class="price">{{ 'customer_current_order.amount' | translate }}: ₹{{order.totalAmount}}</div>
+          <div class="price">{{ 'customer_current_order.price' | translate }}: ₹{{order.totalAmount}}</div>
           <!-- <div *ngIf="order.customerStatus=='Accept'" class="validity">{{ 'customer_current_order.validity_of_order' | translate }}:{{order.validityOfOrder}}</div> -->
         </div>
         </div>
