--- a/src/app/customer/component/customer-payment/customer-payment.component.html
+++ b/src/app/customer/component/customer-payment/customer-payment.component.html
@@ -102,7 +102,7 @@
                 </div>
               </div>
             </div>
-            <button class="btn btn-success btn-lg btn-block" [disabled]="rForm.invalid">{{ 'customer_payment.make_payment' | translate }}</button>
+            <button class="btn btn-success btn-lg btn-block" [disabled]="rForm.invalid">{{ 'customer_payment.place_order' | translate }}</button>
             <!--Submit Button-->
           </form>
         </div>
