--- a/src/app/home-page/header/header.component.html
+++ b/src/app/home-page/header/header.component.html
@@ -39,7 +39,7 @@
           <li class="nav-item" *ngIf="loggedIn==true && role=='Farmer'">
             <a class="nav-link active" id="home-tab" data-toggle="tab" routerLink="/farmer/dashboard" role="tab" aria-controls="home"
               aria-selected="true">
-              <i class="fa fa-home mr-1"></i>DashBoard</a>
+              <i class="fa fa-home mr-1"></i>{{ 'header.dashboard' | translate }}</a>
           </li>
           <li class="nav-item" *ngIf="loggedIn==false">
             <a class="nav-link" id="profile-tab" data-toggle="tab" routerLink="/productList" role="tab" aria-controls="profile" aria-selected="false">
@@ -94,7 +94,7 @@
     <div class="modal-dialog modal-lg">
      <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title modallabel">Change City</h4>
+        <h4 class="modal-title modallabel">{{ 'header.change_city' | translate }}</h4>
       </div>
       <!-- this is for body for dropdown to select city -->
       <div class="modal-body p-2">
@@ -107,7 +107,7 @@
           <button  id="_setImg" (click)="set('Delhi')" data-dismiss="modal">
             <span >
              <img src="../../../assets/images/delhi.png" class="maincities" alt="Delhi"/>
-             <p >Delhi</p>
+             <p >{{ 'header.delhi' | translate }}</p>
            </span>
          </button>
        </li>
@@ -116,7 +116,7 @@
         <button id="_setImg"  (click)="set('Mumbai')" data-dismiss="modal">
          <span>
           <img src="../../../assets/images/mumbai.png" class="maincities" alt="Mumbai">
-          <p>Mumbai</p>
+          <p>{{ 'header.mumbai' | translate }}</p>
         </span>
       </button>
     </li>
@@ -125,7 +125,7 @@
      <button id="_setImg"  (click)="set('Chandigarh')" data-dismiss="modal">
        <span>
          <img src="../../../assets/images/chandigarh.png" class="maincities" alt="Chandigarh">
-         <p>Chandigarh</p>
+         <p>{{ 'header.chandigarh' | translate }}</p>
        </span>
      </button>
    </li>
@@ -134,7 +134,7 @@
       <button id="_setImg"  (click)="set('Ahmedabad')" data-dismiss="modal">
         <span>
           <img src="../../../assets/images/ahmedabad.png" class="maincities" alt="Ahmedabad">
-          <p>Ahmedabad</p>
+          <p>{{ 'header.ahmedabad' | translate }}</p>
         </span>
       </button>
     </li>
@@ -143,7 +143,7 @@
         <button id="_setImg"  (click)="set('Hyderabad')" data-dismiss="modal">
           <span>
             <img src="../../../assets/images/hyderabad.png" class="maincities" alt="Hyderabad">
-            <p>Hyderabad</p>
+            <p>{{ 'header.hyderabad' | translate }}</p>
           </span>
         </button>
       </li>
@@ -152,7 +152,7 @@
           <button id="_setImg"  (click)="set('Chennai')" data-dismiss="modal">
             <span>
               <img src="../../../assets/images/chennai.png" class="maincities" alt="Chennai">
-              <p>Chennai</p>
+              <p>{{ 'header.chennai' | translate }}</p>
             </span>
           </button>
         </li>
@@ -162,8 +162,8 @@
 </div>
 <div class="modal-footer">
   <span>
-    <button type="button" class="btn btn-default " data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-default " data-dismiss="modal" (click)="changeCity()">Save</button>
+    <button type="button" class="btn btn-default " data-dismiss="modal">{{ 'header.cancel' | translate }}</button>
+        <button type="button" class="btn btn-default " data-dismiss="modal" (click)="changeCity()">{{ 'header.save' | translate }}</button>
   </span>
 </div>
 </div>
