Title UI's changed

--- a/src/app/farmer/component/farmer-dashboard/farmer-bank-details/farmer-bank-details.component.html
+++ b/src/app/farmer/component/farmer-dashboard/farmer-bank-details/farmer-bank-details.component.html
@@ -1,5 +1,5 @@
 <div id="bgimg" style="margin-top: 0.1rem; padding-bottom: 3rem">
-<div style="padding-top: 1.7rem">
+<div>
 <h1>{{ 'farmer_bank_details.bank_details' | translate }}</h1>
 </div>
 
