--- a/src/app/customer/component/customer-my-account/customer-address-book/customer-address-book.component.css
+++ b/src/app/customer/component/customer-my-account/customer-address-book/customer-address-book.component.css
@@ -1,13 +1,12 @@
 h1 {
-    font-weight: 600;
+    font-weight: 400;
     padding: 0.5em 0 40px 0;
     text-align: center;
     margin: 0;
     color: #28a745;
     line-height: 42px;
-    margin-top: 2rem;
+    font-size: 1.7rem;
     }
-
 form{
     width : 70%;
     margin : 0 auto;
