--- a/src/app/customer/component/customer-my-account/customer-previous-order/customer-previous-order.component.css
+++ b/src/app/customer/component/customer-my-account/customer-previous-order/customer-previous-order.component.css
@@ -1,5 +1,13 @@
 fieldset, label { margin: 0; padding: 0; }
-h1 { font-size: 1.5em; margin: 10px; }
+h1 {
+    font-weight: 400;
+    padding: 0.5em 0 40px 0;
+    text-align: center;
+    margin: 0;
+    color: #28a745;
+    line-height: 42px;
+    font-size: 1.7rem;
+    }
 
 .card-img-top {
     width: 100%;
@@ -54,9 +62,6 @@ a {
 #delivered:hover {
     color: blue;
     text-underline-position: below;
-}
-
-h5 {
 }
 
 hr {
