--- a/src/app/farmer/component/farmer-dashboard/farmer-add-product/farmer-add-product.component.html
+++ b/src/app/farmer/component/farmer-dashboard/farmer-add-product/farmer-add-product.component.html
@@ -1,5 +1,5 @@
 <div id="bgimg" style="margin-top: 0.1rem; padding-bottom: 3rem">
-<div style="padding-top: 1.7rem">
+<div>
   <h1> {{ 'farmer_add_product.upload_product' | translate }} </h1>
 <form [formGroup]="rForm" (ngSubmit)="addProduct(rForm.value)">
 
