--- a/src/app/farmer/component/farmer-dashboard/farmer-bank-details/farmer-bank-details.component.css
+++ b/src/app/farmer/component/farmer-dashboard/farmer-bank-details/farmer-bank-details.component.css
@@ -4,14 +4,14 @@ form{
 }
 
 h1 {
-    font-weight: 600;
+    font-weight: 400;
     padding: 0.5em 0 40px 0;
     text-align: center;
     margin: 0;
     color: #28a745;
     line-height: 42px;
+    font-size: 1.7rem;
     }
-
 .display-4{
     color : white;
     margin-top : -30px;
