--- a/src/app/farmer/component/farmer-my-account/farmer-add-address/farmer-add-address.component.css
+++ b/src/app/farmer/component/farmer-my-account/farmer-add-address/farmer-add-address.component.css
@@ -10,8 +10,8 @@ h1 {
     margin: 0;
     color: #28a745;
     line-height: 42px;
+    font-size: 1.7rem;
     }
-
 .display-4{
     color : white;
     margin-top : -30px;
