--- a/src/app/farmer/component/farmer-authentication-authorization/aadhaar/aadhaar.component.css
+++ b/src/app/farmer/component/farmer-authentication-authorization/aadhaar/aadhaar.component.css
@@ -21,15 +21,14 @@
     margin-top: 3rem;
 }
 h1 {
-    font-weight: 600;
+    font-weight: 400;
     padding: 0.5em 0 40px 0;
     text-align: center;
     margin: 0;
-    color: #29a745;
+    color: #28a745;
     line-height: 42px;
+    font-size: 1.7rem;
     }
-
-
 @keyframes alertAnim {
     from {
         opacity:0;
