--- a/src/app/farmer/component/farmer-login/farmer-login.component.css
+++ b/src/app/farmer/component/farmer-login/farmer-login.component.css
@@ -20,16 +20,16 @@
 .button {
     margin-top: 3rem;
 }
+
 h1 {
-    font-weight: 600;
+    font-weight: 400;
     padding: 0.5em 0 40px 0;
     text-align: center;
     margin: 0;
-    color: #56a846;
+    color: #28a745;
     line-height: 42px;
+    font-size: 1.7rem;
     }
-
-
 
 @keyframes alertAnim {
     from {
