--- a/src/app/shared/help/help.component.css
+++ b/src/app/shared/help/help.component.css
@@ -11,10 +11,11 @@ a{
 }
 /* CSS for Heading text */
 h1 {
-    font-weight: 600;
+    font-weight: 400;
     padding: 0.5em 0 40px 0;
     text-align: center;
     margin: 0;
-    color: #29a745;
+    color: #28a745;
     line-height: 42px;
-	}
+    font-size: 1.7rem;
+    }
