--- a/src/app/shared/support/support.component.css
+++ b/src/app/shared/support/support.component.css
@@ -4,14 +4,14 @@ form{
 }
 
 h1 {
-    font-weight: 600;
+    font-weight: 400;
     padding: 0.5em 0 40px 0;
     text-align: center;
     margin: 0;
-    color: #29a745;
+    color: #28a745;
     line-height: 42px;
+    font-size: 1.7rem;
     }
-
 /* h1{
     text-align : center;
     margin: 15px 0 0.5em 0;
