--- a/src/app/farmer/component/farmer-my-account/farmer-delete-profile/farmer-delete-profile.component.html
+++ b/src/app/farmer/component/farmer-my-account/farmer-delete-profile/farmer-delete-profile.component.html
@@ -14,7 +14,7 @@
     </div>
     </div>
     <div class = form-comp-button>
-    <button type="submit" class="btn btn-primary" value="Submit Form" [disabled]="!rForm.valid">{{ 'delete_profile.delete' | translate }}</button>
+    <button type="submit" class="btn btn-success" value="Submit Form" [disabled]="!rForm.valid">{{ 'delete_profile.delete' | translate }}</button>
     </div>
   </div>
 </form>
