--- a/src/app/farmer/component/farmer-my-account/farmer-alternate-mobile/farmer-alternate-mobile.component.html
+++ b/src/app/farmer/component/farmer-my-account/farmer-alternate-mobile/farmer-alternate-mobile.component.html
@@ -20,7 +20,7 @@
     </div>
     </div>
     <div class = form-comp-button>
-    <button type="submit" class="btn btn-primary" value="Submit Form" [disabled]="!rForm.valid">{{ 'alternate_mobile_number.update' | translate }}</button>
+    <button type="submit" class="btn btn-success" value="Submit Form" [disabled]="!rForm.valid">{{ 'alternate_mobile_number.update' | translate }}</button>
     </div>
   </div>
 </form>
