--- a/src/app/farmer/component/farmer-my-account/farmer-change-password/farmer-change-password.component.html
+++ b/src/app/farmer/component/farmer-my-account/farmer-change-password/farmer-change-password.component.html
@@ -32,7 +32,7 @@
     </div>
     </div>
     <div class = form-comp-button>
-    <button type="submit" class="btn btn-primary" value="Submit Form" [disabled]="!rForm.valid">{{ 'farmer_change_password.change' | translate }}</button>
+    <button type="submit" class="btn btn-success" value="Submit Form" [disabled]="!rForm.valid">{{ 'farmer_change_password.change' | translate }}</button>
     </div>
   </div>
 </form>
