--- a/src/app/customer/component/customer-my-account/customer-address-book/customer-add-address/customer-add-address.component.html
+++ b/src/app/customer/component/customer-my-account/customer-address-book/customer-add-address/customer-add-address.component.html
@@ -12,6 +12,8 @@
         </div>
       </div>
       </div>
+      <div class="row">
+        <div class="col-5">
       <div class = form-comp>
         <div class = "name"><label for="city">{{ 'customer_add_address.city' | translate }}</label></div>
         <input type="text" class="form-control" id="city" placeholder="{{ 'customer_add_address.enter_your_city' | translate }}" formControlName="city">
@@ -21,6 +23,9 @@
           </div>
         </div>
         </div>
+        </div>
+        <div class="col-1"></div>
+        <div class="col-6">
       <div class = form-comp>
         <div class = "name"><label for="district">{{ 'customer_add_address.district' | translate }}</label></div>
         <input type="text" class="form-control" id="district" placeholder=" {{ 'customer_add_address.enter_your_district' | translate }}" formControlName="district">
@@ -29,6 +34,8 @@
             {{ 'customer_add_address.district_required' | translate }}!
           </div>
         </div>
+      </div>
+      </div>
       </div>
       <div class = form-comp>
         <div class = "name"><label for="state">{{ 'customer_add_address.state' | translate }}</label></div>
