--- a/src/app/customer/component/customer-my-cart/customer-my-cart.component.html
+++ b/src/app/customer/component/customer-my-cart/customer-my-cart.component.html
@@ -17,10 +17,18 @@
 				<table class="table table-hover mt-2">
 					<tbody>
 						<tr *ngFor="let item of items; let ind=index">
-							<td class="text-left ml-4">
+							<!-- <td class="text-left ml-4">
 								<a href="#">
 									<img src="http://placehold.it/100x70" alt="{{item.productName}}.png" title="{{item.productName}}">
 								</a>
+							</td> -->
+							<td>
+								<div *ngFor="let cartItem of cartItems">
+									<div *ngIf="item.productName==cartItem">
+									<!-- Card image -->
+										<img src="../../../../../assets/order/{{cartItem}}.jpg" alt="{{item.productName}}">
+									</div>
+								</div>
 							</td>
 							<td class="text-left">
 								<a href="#">{{item.productName}}</a>
