--- a/src/app/customer/component/customer-my-account/customer-address-book/customer-address-book.component.html
+++ b/src/app/customer/component/customer-my-account/customer-address-book/customer-address-book.component.html
@@ -16,7 +16,7 @@
 
             <div class="card-text">
               <ul style="list-style-type: none; padding: 0">
-                <li style="text-align: center"><b>Adderss {{i+1}}</b></li>
+                <li style="text-align: center"><b>Address {{i+1}}</b></li>
                 <hr style="margin: .75rem; width: 100%">
                 <li>{{address.addressLine}}</li>
                 <li>{{address.district}},</li>
