--- a/src/app/farmer/component/farmer-my-account/farmer-delete-profile/farmer-delete-profile.component.html
+++ b/src/app/farmer/component/farmer-my-account/farmer-delete-profile/farmer-delete-profile.component.html
@@ -1,21 +1,59 @@
-<div class="my-3">
-<h1>{{ 'delete_profile.delete_profile' | translate }}</h1>
-<form [formGroup]="rForm" (ngSubmit)="deleteFarmerProfile(rForm.value)">
-  <div class = "card">
-    <div class="form-group">
-    <div class = form-comp>
-    <div class = "name"><label for="currentPassword">{{ 'delete_profile.enter_password' | translate }}</label></div>
-    <input type="password" class="form-control" placeholder="{{ 'delete_profile.enter_current_password' | translate }}" formControlName="currentPassword">
-    <div *ngIf="rForm.controls['currentPassword'].touched && rForm.controls['currentPassword'].invalid" class="alert">
-      <div *ngIf="rForm.controls['currentPassword'].hasError('required')">
-        {{ 'delete_profile.current_password_required' | translate }}!
+<div *ngIf="!hideVar" class="my-3">
+  <h1>{{ 'delete_profile.delete_profile' | translate }}</h1>
+  <form [formGroup]="rForm" (ngSubmit)="sendOtp(rForm.value)">
+    <div class = "card">
+      <div class="form-group">
+        <div class = form-comp>
+          <div class = "name"><label for="currentPassword">Enter Mobile Number*</label></div>
+          <input type="text" class="form-control" placeholder="Enter mobile number" formControlName="mobileNo">
+          <div *ngIf="rForm.controls['mobileNo'].touched && rForm.controls['mobileNo'].invalid" class="alert">
+            <div *ngIf="rForm.controls['mobileNo'].hasError('minlength')" >
+              less then 10 digit
+            </div>
+            <div *ngIf="rForm.controls['mobileNo'].hasError('maxlength')">
+              more then 10
+            </div>
+            <div *ngIf="rForm.controls['mobileNo'].hasError('required')">
+              required
+            </div>
+          </div>
+        </div>
+        <div class = form-comp>
+          <div class = "name"><label for="currentPassword">{{ 'delete_profile.enter_password' | translate }}*</label></div>
+          <input type="password" class="form-control" placeholder="{{ 'delete_profile.enter_current_password' | translate }}" formControlName="currentPassword">
+          <div *ngIf="rForm.controls['currentPassword'].touched && rForm.controls['currentPassword'].invalid" class="alert">
+            <div *ngIf="rForm.controls['currentPassword'].hasError('required')">
+              {{ 'delete_profile.current_password_required' | translate }}!
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class = form-comp-button>
+        <button type="submit" class="btn btn-primary" value="Submit Form" [disabled]="!rForm.valid">{{ 'delete_profile.delete' | translate }}</button>
       </div>
     </div>
-    </div>
-    </div>
-    <div class = form-comp-button>
-    <button type="submit" class="btn btn-primary" value="Submit Form" [disabled]="!rForm.valid">{{ 'delete_profile.delete' | translate }}</button>
+  </form>
+</div>
+  <div *ngIf="hideVar" style="padding-top: 1.7rem">
+    <h1>Verify otp</h1>
+    <div class="container-fluid">
+      <div class="card  shadow cardwidth">
+        <div class="card-body">
+          <form [formGroup]="otpForm" (ngSubmit)="verifyOtp(otpForm.value)">
+            <div class="form-group">
+              <div class = "form-comp-top">
+                <label for="exampleInputEmail1">{{ 'farmer_forgot_password.enter_otp' | translate }}*</label>
+                <input class="form-control" type="text" id="otp" formControlName="otp">
+                <div class="alert" *ngIf=" otpForm.controls['otp'].touched && otpForm.controls['otp'].hasError('required')">
+                  {{ 'farmer_forgot_password.otp_is_required' | translate }}
+                </div>
+              </div>
+            </div>
+            <div class = "form-comp-button">
+              <button type="submit" class="btn btn-success" value="Submit Form" [disabled]="!otpForm.valid">{{ 'farmer_forgot_password.verify_otp' | translate }}</button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
-</form>
-
