--- a/src/app/customer/component/product-list/product-list.component.css
+++ b/src/app/customer/component/product-list/product-list.component.css
@@ -83,6 +83,14 @@ hr {
   width: 100%;
   height: 12em;
 }
+.searchResults{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-weight: 500;
+  font-size: 16px;
+  color:grey;
+}
 .bottom {
   text-align: center;
   padding: 0rem;
