Updated Customer Payment Component

--- a/src/app/customer/component/customer-payment/customer-payment.component.css
+++ b/src/app/customer/component/customer-payment/customer-payment.component.css
@@ -6,3 +6,12 @@
     display: inline-block;
     animation: 2s alertAnim forwards;
 }
+
+.checkbox{
+    display: inline;
+}
+
+img{
+    width:150px;
+    height: 150px;
+} 
