--- a/src/app/farmer/component/farmer-my-account/farmer-delete-profile/farmer-delete-profile.component.html
+++ b/src/app/farmer/component/farmer-my-account/farmer-delete-profile/farmer-delete-profile.component.html
@@ -29,13 +29,13 @@
         </div>
       </div>
       <div class = form-comp-button>
-        <button type="submit" class="btn btn-primary" value="Submit Form" [disabled]="!rForm.valid">{{ 'delete_profile.delete' | translate }}</button>
+        <button type="submit" class="btn btn-success" value="Submit Form" [disabled]="!rForm.valid">{{ 'delete_profile.delete' | translate }}</button>
       </div>
     </div>
   </form>
 </div>
   <div *ngIf="hideVar" style="padding-top: 1.7rem">
-    <h1>Verify otp</h1>
+    <h1>Verify Otp</h1>
     <div class="container-fluid">
       <div class="card  shadow cardwidth">
         <div class="card-body">
