--- a/src/app/customer/component/customer-my-account/customer-my-account.component.css
+++ b/src/app/customer/component/customer-my-account/customer-my-account.component.css
@@ -113,3 +113,16 @@ button:focus{
     background-color: #FFFFFF;
 }
 
+a {
+    color: #29a745;
+    text-decoration: none;
+    background-color: transparent;
+    -webkit-text-decoration-skip: objects;
+}
+
+a:hover {
+    color: black;
+    text-decoration: none;
+    background-color: transparent;
+    -webkit-text-decoration-skip: objects;
+}
