--- a/src/app/customer/component/customer-my-account/customer-my-account.component.html
+++ b/src/app/customer/component/customer-my-account/customer-my-account.component.html
@@ -31,7 +31,7 @@
       <app-customer-address-book></app-customer-address-book>
     </div>
     <div class="tab-pane change-password" id="settings" role="tabpanel">
-      <div id="bgimg" style="padding-top: 3rem; padding-bottom: 3rem">
+      <div id="bgimg" style="padding-bottom: 3rem">
         <h1> {{ 'customer_my_account.change_password' | translate }} </h1>
 
         <form [formGroup]="rForm" (ngSubmit)="onSubmit(rForm.value)">
@@ -93,9 +93,9 @@
               </div>
             </div>
 
-            <div class=f orm-comp-button>
+            <div class="form-comp-button">
 
-              <button type="submit" class="btn btn-primary" value="Submit Form" [disabled]="!rForm.valid">{{ 'customer_my_account.submit' | translate }}</button>
+              <button type="submit" class="btn btn-success" value="Submit Form" [disabled]="!rForm.valid">{{ 'customer_my_account.submit' | translate }}</button>
             </div>
           </div>
         </form>
@@ -103,7 +103,7 @@
     </div>
 
     <div class="tab-pane change-password" id="settings1" role="tabpanel">
-      <div id="bgimg" style="padding-top: 5.4rem; padding-bottom: 3rem">
+      <div id="bgimg" style="padding-bottom: 3rem">
         <h1> {{ 'customer_my_account.delete_profile' | translate }} </h1>
 
         <form [formGroup]="rFormDeleteProfile" (ngSubmit)="deleteUser(rFormDeleteProfile.value)">
@@ -140,9 +140,9 @@
               </div>
             </div>
 
-            <div class=f orm-comp-button>
+            <div class="form-comp-button">
 
-              <button type="submit" class="btn btn-primary" value="Submit Form" [disabled]="!rFormDeleteProfile.valid">{{ 'customer_my_account.submit' | translate }}</button>
+              <button type="submit" class="btn btn-success" value="Submit Form" [disabled]="!rFormDeleteProfile.valid">{{ 'customer_my_account.submit' | translate }}</button>
             </div>
           </div>
         </form>
