--- a/src/app/farmer/component/farmer-dashboard/farmer-bank-details/farmer-bank-details.component.css
+++ b/src/app/farmer/component/farmer-dashboard/farmer-bank-details/farmer-bank-details.component.css
@@ -77,3 +77,13 @@ button{
 .bank-det{
     margin-top: 4rem;
 }
+
+/* Payment */
+.checkbox{
+    display: inline;
+}
+
+img{
+    width:150px;
+    height: 150px;
+} 
